--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "source": "https://github.com/opekunov/laravel-centrifugo-broadcaster"
   },
   "require": {
-    "php": "^7.3|^8.0",
-    "laravel/framework": "^5.6|^6.0|^7.0|^8.0|^9.0",
+    "php": "^7.4|^8.0",
+    "laravel/framework": "^8.75|^9.0",
     "guzzlehttp/guzzle": "~6.0|^7.0"
   },
   "require-dev": {
