--- a/composer.json
+++ b/composer.json
@@ -1,55 +1,60 @@
 {
-  "name": "opekunov/laravel-centrifugo-broadcaster",
-  "type": "library",
-  "description": "Centrifugo broadcaster for laravel 5.6-9.x and Centrifugo >= 2.8.1",
-  "keywords": [
-    "laravel-broadcaster",
-    "broadcaster",
-    "laravel",
-    "centrifugo",
-    "web socket",
-    "web-socket",
-    "socket",
-    "real time"
-  ],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Aleksandr Opekunov",
-      "email": "iam@opekunov.com",
-      "role": "Creator"
-    }
-  ],
-  "homepage": "https://github.com/opekunov/laravel-centrifugo-broadcaster",
-  "support": {
-    "email": "iam@opekunov.com",
-    "issues": "https://github.com/opekunov/laravel-centrifugo-broadcaster/issues",
-    "source": "https://github.com/opekunov/laravel-centrifugo-broadcaster"
-  },
-  "require": {
-    "php": "^7.4|^8.0",
-    "laravel/framework": "^8.75|^9.0",
-    "guzzlehttp/guzzle": "~6.0|^7.0"
-  },
-  "require-dev": {
-    "orchestra/testbench": "^3.7",
-    "phpunit/phpunit": "^6||^7||^8"
-  },
-  "autoload": {
-    "psr-4": {
-      "Opekunov\\Centrifugo\\": "src/"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Opekunov\\Centrifugo\\CentrifugoServiceProvider"
-      ]
-    }
-  },
-  "config": {
-    "sort-packages": true
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "name": "opekunov/laravel-centrifugo-broadcaster",
+    "type": "library",
+    "description": "Centrifugo broadcaster for laravel 5.6-9.x and Centrifugo >= 2.8.1",
+    "keywords": [
+        "laravel-broadcaster",
+        "broadcaster",
+        "laravel",
+        "centrifugo",
+        "web socket",
+        "web-socket",
+        "socket",
+        "real time"
+    ],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Aleksandr Opekunov",
+            "email": "iam@opekunov.com",
+            "role": "Creator"
+        }
+    ],
+    "homepage": "https://github.com/opekunov/laravel-centrifugo-broadcaster",
+    "support": {
+        "email": "iam@opekunov.com",
+        "issues": "https://github.com/opekunov/laravel-centrifugo-broadcaster/issues",
+        "source": "https://github.com/opekunov/laravel-centrifugo-broadcaster"
+    },
+    "require": {
+        "php": "^7.4|^8.0",
+        "laravel/framework": "^8.75|^9.0",
+        "guzzlehttp/guzzle": "~6.0|^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^v7.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Opekunov\\Centrifugo\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Opekunov\\Centrifugo\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Opekunov\\Centrifugo\\CentrifugoServiceProvider"
+            ]
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
