--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "opekunov/laravel-centrifugo-broadcaster",
     "type": "library",
-    "description": "Centrifugo broadcaster for laravel 5.6-9.x and Centrifugo >= 2.8.1",
+    "description": "Centrifugo broadcaster for laravel 8-9.x and Centrifugo >= 2.8.1",
     "keywords": [
         "laravel-broadcaster",
         "broadcaster",
@@ -27,9 +27,10 @@
         "source": "https://github.com/opekunov/laravel-centrifugo-broadcaster"
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0|^8.1",
         "laravel/framework": "^8.75|^9.0",
-        "guzzlehttp/guzzle": "~6.0|^7.0"
+        "guzzlehttp/guzzle": "~6.0|^7.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
